--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
